# vainos-config

./: .configuration.nix.swp  .flake.nix.swp  .home.nix.swp  README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix
fabric-bar/: default.nix  derivation.nix  flake.nix  pyproject.toml  shell.nix
fabric-bar/bar/: bar.css  bar.py
sources/: vimrc.vim  zshrc.zsh
sources/alacritty/: alacritty.toml
sources/hypr/: hyprland.conf  start.sh
sources/i3/: config
sources/kitty/: Dark_Pride.conf  colors.conf  kitty.conf
sources/mako/: .config.swp  config
sources/neofetch/: ascii-art.txt  config.conf
sources/waybar/: style.css
sources/wofi/: config  style.css
sources/yazi/: yazi.toml
system/app/: docker.nix  flatpak.nix  virtualization.nix
system/hardware/: bluetooth.nix  graphics.nix  kernel.nix  opengl.nix  power.nix  systemd.nix  time.nix  udev.nix
system/wm/: dbus.nix  fonts.nix  gnome-keyring.nix  hyprland.nix  i3.nix  pipewire.nix  wayland.nix  x11.nix
user/app/nvim/: nvim.nix
